[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Screw/Screw.gd" type="Script" id=1]
[ext_resource path="res://src/screw.png" type="Texture" id=2]
[ext_resource path="res://src/screw_side.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 16 )

[node name="Screw" type="Area2D" groups=["Dragable", "Screw"]]
monitorable = false
script = ExtResource( 1 )

[node name="SScrewTop" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CScrew" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="SScrewSide" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 14 )
rotation = 1.57079
texture = ExtResource( 3 )

[node name="CScrew2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14 )
shape = SubResource( 2 )
disabled = true

[connection signal="area_entered" from="." to="." method="_on_Screw_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Screw_area_exited"]
